--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,8 @@
-
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultzone: https://localhost:8761/eureka
